<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/bar_height"
        android:orientation="horizontal"
        android:layout_alignParentTop="true"
        android:id="@+id/bar">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="@dimen/bar_height"
            android:src="@drawable/bluetooth_icon"
            android:layout_weight="4"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/bar_height"
            android:text="@string/app_name"
            android:textColor="@color/black"
            android:gravity="left|center"
            android:textSize="@dimen/app_name_size"
            android:layout_weight="1"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/bar"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_margin="@dimen/kafelek_margin"
            android:id="@+id/create"
            android:layout_weight="1">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:src="@drawable/baseline_add_circle_black_48dp"
                android:scaleType="centerInside"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="4"
                android:text="@string/create"
                android:textSize="@dimen/app_name_size"
                android:textColor="@color/black"
                android:textAlignment="center"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_margin="@dimen/kafelek_margin"
            android:layout_weight="1"
            android:id="@+id/join">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:src="@drawable/baseline_sensor_door_black_48dp"
                android:scaleType="centerInside"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="4"
                android:text="@string/join"
                android:textSize="@dimen/app_name_size"
                android:textColor="@color/black"
                android:textAlignment="center"/>

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>